--- a/app/sass/_media.scss
+++ b/app/sass/_media.scss
@@ -485,3 +485,66 @@
 	}
 }
 
+@media only screen and (min-width : 1440px) {
+
+	.section {
+		&-curved {
+			background-size: cover;
+			padding-top: 54.1%;
+			// background-size: 100% 100%;
+			// height: 779px;
+		}	
+	}
+
+	.s {
+		&-main {
+			background-size: cover;
+			padding-top: 52.2222%;
+
+			.camera {
+				width: 650px;
+			}
+
+			&-tag {
+				&:nth-child(1) {
+					top: 33.24%;
+					left: 73%;
+				}
+
+				&:nth-child(2) {
+					top: 58.644%;
+					left: 73%;
+				}
+
+				&:nth-child(3) {
+					top: 55%;
+					right: 77.5%;
+				}
+
+				&:nth-child(4) {
+					top: 83%;
+					right: 80.5%;
+				}
+			}
+		}
+
+		&-desire {
+			.section-curved {
+				padding-top: 45%;
+			}
+		}
+	}
+}
+
+@media only screen and (min-width : 1700px) {
+
+	.s {
+		&-main {
+			&-subtitle {
+				margin-top: 100px;
+			}
+
+		}
+	}
+}
+
