--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -259,6 +259,10 @@ body {
 			font-weight: 500;
 			font-size: 14px;
 
+			span {
+				display: block;
+			}
+
 			&:nth-child(1) {
 				top: calc(50% - 126px);
 				left: calc(50% + 320px);
@@ -301,6 +305,10 @@ body {
 			font-size: 18px;
 			font-weight: 800;
 			margin: -30px 0 50px;
+		}
+
+		.video {
+			margin-bottom: 20px;
 		}
 
 		.form {
@@ -452,6 +460,7 @@ body {
 	}
 
 	&-clients {
+		padding-bottom: 0;
 		.client {
 			margin: 0 auto 30px;
 			padding: 20px 10px;
